Mon Jul  3 04:54:13 BST 2006  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (make_content): Break up dsize calculation
	  differently for legibility.

Tue Mar 21 11:08:55 GMT 2006  Colin Watson  <cjwatson@debian.org>

	Improve portability to Solaris and other systems without setenv.

	* lib/setenv.c, lib/setenv.h, lib/unsetenv.c: Copied from gnulib
	  0.0.20051110-1.
	* lib/Makefile.in (ALLSRCS): Add setenv.c and unsetenv.c.
	* lib/README: Mention the above.
	* configure.in: Check for setenv and unsetenv and use the gnulib
	  versions if they are unavailable.
	* src/man.c, src/whatis.c: Include lib/setenv.h.

Thu Mar  9 08:08:39 GMT 2006  Daniel Nylander  <po@danielnylander.se>

	* po/sv.po: Update from Translation Project.
	* man/THANKS: Add translator credit.

Wed Feb 22 09:44:02 GMT 2006  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (command_new_argstr): Skip "exec" at the start of a
	  command, to make old configuration files work (Debian bug
	  #353959).
	* docs/NEWS: Document this.

Mon Feb 20 09:33:18 GMT 2006  Henning Makholm  <henning@makholm.net>

	* src/lexgrog.l: Add Danish translation of NAME.

Sun Jan 22 19:02:43 GMT 2006  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.
	* po/LINGUAS: Add vi.
	* man/THANKS: Add translator credit.

Sun Jan 22 18:49:16 GMT 2006  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1, man/es_ES.88591/man1/man.man1,
	  man/it_IT.88591/man1/man.man1: Fix mistaken use of .l instead of
	  .I (thanks, Valéry Perrin).

Thu Jan 19 10:15:33 GMT 2006  Karl Eichwalder  <ke@suse.de>

	* po/de.po: Update from Translation Project.
	* man/THANKS: Add translator credit.

Sat Dec 31 16:30:44 GMT 2005  Colin Watson  <cjwatson@debian.org>

	* lib/hashtable.c (hash_free): Update function name in debug
	  message.

Sun Dec 18 08:57:01 GMT 2005  Yuri Kozlov  <kozlov.y@gmail.com>

	* src/lexgrog.l: Change encoding of Russian translation of NAME to
	  KOI8-R.
