@@ -1,3 +1,9 @@
+Wed Aug  9 14:10:57 BST 2006  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (make_roff_command): Recognise preprocessor encoding
+	  declarations like "-*- coding: utf8 -*-". Invoke the "preconv"
+	  preprocessor for these if available.
+
 Mon Jul  3 04:54:13 BST 2006  Colin Watson  <cjwatson@debian.org>
 
 	* libdb/db_lookup.c (make_content): Break up dsize calculation
